<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/loginTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/loginPageTitle"
        android:textColor="#ffffffFF"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp" >

        <TextView
            android:id="@+id/useridLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/usernameLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/useridEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/useridLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/useridLabel"
            android:inputType="text" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/useridLabel"
            android:paddingTop="36dp"
            android:text="@string/passwordLabel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/passwordLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/passwordLabel"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/rememberChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordLabel"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/rememberidLabel" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/rememberChk"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="26dp"
            android:text="@string/loginBtnText" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rememberChk"
            android:layout_marginRight="20dp"
            android:layout_marginTop="26dp"
            android:text="@string/exitBtnText" />
    </RelativeLayout>

</RelativeLayout>