<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CompareActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/com_round_corner"  
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="항목"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="오늘"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="어제"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="이번달"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="지난달"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
		<View android:layout_height="2dip" android:background="#ff909090"/>
        <TableRow
            android:id="@+id/rowElect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="#000"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/elect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/titleElect"
                android:textSize="@dimen/type_text_size" />

            <TextView
                android:id="@+id/todayElect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />
            
            <TextView
                android:id="@+id/yesterdayElect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/thismonthElect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/lastmonthElect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

        </TableRow>
		<View android:layout_height="2dip" android:background="#ff909090"/>
        <TableRow
            android:id="@+id/rowHeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="#000"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/heat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/titleHeat"
                android:textSize="@dimen/type_text_size" />

            <TextView
                android:id="@+id/todayHeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />
            
            <TextView
                android:id="@+id/yesterdayHeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/thismonthHeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/lastmonthHeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

        </TableRow>
		<View android:layout_height="2dip" android:background="#ff909090"/>
        <TableRow
            android:id="@+id/rowHotwater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="#000"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/hotwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/titleHotwater"
                android:textSize="@dimen/type_text_size" />

            <TextView
                android:id="@+id/todayHotwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />
            
            <TextView
                android:id="@+id/yesterdayHotwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/thismonthHotwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/lastmonthHotwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

        </TableRow>
		<View android:layout_height="2dip" android:background="#ff909090"/>
        <TableRow
            android:id="@+id/rowGas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="#000"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/titleGas"
                android:textSize="@dimen/type_text_size" />

            <TextView
                android:id="@+id/todayGas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />
            
            <TextView
                android:id="@+id/yesterdayGas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/thismonthGas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/lastmonthGas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

        </TableRow>
		<View android:layout_height="2dip" android:background="#ff909090"/>
        <TableRow
            android:id="@+id/rowWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="#000"
            android:paddingTop="5dp" 
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/titleWater"
                android:textSize="@dimen/type_text_size" />

            <TextView
                android:id="@+id/todayWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />
            
            <TextView
                android:id="@+id/yesterdayWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/thismonthWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/lastmonthWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:text="" />

        </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
           <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>        

    </TableLayout>

</RelativeLayout>